# commerce

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  buf.gen.yaml  build.rs  commerce.service  kong.yaml  service.nomad
.github/workflows/: deploy-dev.yaml  deploy-main.yaml  deploy-prod.yaml
migrations/: V10__offer_prices_add_recurring.sql  V10__shops_add_contact_email_address.sql  V11__offers_add_is_active.sql  V11__shops_add_client_id.sql  V12__offers_add_type.sql  V12__shop_customization_drop_colors.sql  V13__offers_add_is_featured.sql  V13__shop_customization_add_primary_color_layout_type.sql  V14__market_booths_add_slug.sql  V14__shop_add_website_id.sql  V15__market_booths_make_slug_unique.sql  V16__shop_customization.sql  V17__market_booths_add_domain.sql  V18__shop_domains.sql  V19__shop_domains_add_client_id.sql  V1__market_booths.sql  V1__shops.sql  V20__shop_customization_add_dark_mode_images.sql  V2__offers.sql  V3__market_booths_ts_vectors.sql  V3__offer_images.sql  V4__offer_prices.sql  V4__offers_ts_vectors.sql  V5__market_booths_image.sql  V5__shop_customization.sql  V6__shop_domains.sql  V7__offer_prices.sql  V7__shops_add_is_active.sql  V8__market_booths_fees.sql  V8__offer_prices_add_trial_period.sql  V9__offer_prices_on_delete_cascade.sql  V9__shipping_rates.sql
src/: auth.rs  db.rs  error.rs  images.rs  lib.rs  logging.rs  main.rs  publisher.rs
src/api/: FILE_DESCRIPTOR_SET  mod.rs  peoplesmarkets.commerce.v1.rs  peoplesmarkets.commerce.v1.tonic.rs  peoplesmarkets.media.v1.rs  peoplesmarkets.ordering.v1.rs  peoplesmarkets.pagination.v1.rs  sited_io.commerce.v1.rs  sited_io.media.v1.rs  sited_io.types.v1.rs  sited_io.websites.v1.rs
src/model/: market_booth.rs  mod.rs  offer.rs  offer_image.rs  offer_price.rs  shipping_rate.rs  shop.rs  shop_customization.rs  shop_domain.rs
src/services/: market_booth.rs  mod.rs  offer.rs  shipping_rate.rs  shop.rs  shop_customization.rs  shop_domain.rs  shops.rs
src/subscribers/: mod.rs  websites.rs
