[package]
name = "commerce"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "0.2.9"
prost = "0.11.9"
tokio = { version = "1.29.1", features = ["rt", "macros"] }
tonic = "0.9.2"
tonic-web = "0.9.2"
tower-http = { version = "0.4.3", features = ["cors", "trace"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["tracing-log"] }
