[package]
name = "commerce"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "0.56.1", default-features = false, features = ["rt-tokio"] }
aws-credential-types = { version = "0.56.1", default-features = false, features = ["hardcoded-credentials"] }
aws-sdk-s3 = { version = "0.30.0", default-features = false, features = ["rt-tokio", "rustls"] }
chrono = "0.4.26"
deadpool-postgres = "0.10.5"
fallible-iterator = "0.2.0"
http = "0.2.9"
image = { version = "0.24.7", default-features = false, features = [
  "jpeg",
  "png",
  "webp",
] }
infer = { version = "0.15.0", default-features = false }
jwtk = "0.2.4"
openssl = { version = "0.10.56", features = ["vendored"] }
postgres-protocol = "0.6.6"
prost = "0.11.9"
refinery = { version = "0.8.10", features = ["tokio-postgres"] }
reqwest = "0.11.18"
sea-query = "0.29"
sea-query-postgres = { version = "0.3", features = [
  "with-uuid",
  "with-chrono",
] }
serde = { version = "1.0.180", features = ["derive"] }
tokio = { version = "1.29.1", features = ["rt", "macros"] }
tonic = "0.9.2"
tonic-health = "0.9.2"
tonic-reflection = "0.9.2"
tonic-web = "0.9.2"
tower-http = { version = "0.4.3", features = ["trace"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["tracing-log"] }
uuid = { version = "1.4.1", features = ["v4"] }
webp = { version = "0.2.5", default-features = false, features = ["img"] }

[build-dependencies]
tonic-build = "0.9.2"
